--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <body>
     <div class="container">
       <nav>
-        <img src="./assets/images/logo.svg" alt="logo" class="logo" />
+        <!-- <img src="./assets/images/logo.svg" alt="logo" class="logo" /> -->
+        <h1 class="logo">B.</h1>
         <ul class="nav-links">
           <li>Home</li>
           <li>New</li>
@@ -36,20 +37,17 @@
         <div class="main-container">
           <div class="main-blog">
             <picture>
-              <source media="(max-width:800px)"
+              <!-- <source media="(max-width:800px)"
               srcset="./assets/images/image-web-3-mobile.jpg" /`>
-              <img src="./assets/images/image-web-3-desktop.jpg" alt="web3" />
+              <img src="./assets/images/image-web-3-desktop.jpg" alt="web3" /> -->
             </picture>
             <div class="blog-info">
-              <h1 class="blog-title">
-                Lorem ipsum dolor sit amet consectetur.
-              </h1>
+              <h1 class="blog-title">Lorem ipsum dolor sit amet.</h1>
               <div class="blog-read">
                 <p class="blog-content">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Dignissimos aperiam est dicta, totam magnam recusandae nobis
-                  voluptatibus quas impedit voluptatum eum ducimus repellat
-                  ipsum animi. Saepe, vero. Rerum, veniam reprehenderit.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
+                  excepturi consequuntur illum suscipit rem temporibus aliquam
+                  repellat modi nihil alias?
                 </p>
                 <button class="open-popup-btn">Read more</button>
               </div>
@@ -65,8 +63,8 @@
                     Are Being Hijacked
                   </h3>
                   <p class="new-content">
-                    Unauthorized voice replicas are spreading across streaming
-                    platforms faster than current laws can react.
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Eaque, architecto.
                   </p>
                 </div>
                 <div class="new-blog">
@@ -75,8 +73,8 @@
                     AI Music
                   </h3>
                   <p class="new-content">
-                    Decades-old copyright rules are failing to protect artists
-                    as AI models freely train on their songs without consent.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Pariatur, sit.
                   </p>
                 </div>
                 <div class="new-blog">
@@ -84,9 +82,8 @@
                     Congress Faces Pressure to Regulate AI Music Platforms
                   </h3>
                   <p class="new-content">
-                    Lawmakers are being urged to introduce new federal
-                    protections requiring consent, transparency, and
-                    accountability from AI developers.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Reprehenderit, tenetur?
                   </p>
                 </div>
               </div>
@@ -97,12 +94,9 @@
               <img src="./assets/images/image-retro-pcs.jpg" alt="" />
               <div class="top-info">
                 <h2 class="num">01</h2>
-                <h3 class="top-title open-popup-btn">
-                  Innovation Outpacing Cultural Safety
-                </h3>
+                <h3 class="top-title open-popup-btn">Lorem, ipsum</h3>
                 <p class="top-content">
-                  The U.S.’s market-first approach to AI policy has led to rapid
-                  innovation—and equally rapid exploitation.
+                  Lorem ipsum dolor sit amet consectetur adipisicing.
                 </p>
               </div>
             </div>
@@ -110,12 +104,9 @@
               <img src="./assets/images/image-top-laptops.jpg" alt="" />
               <div class="top-info">
                 <h2 class="num">02</h2>
-                <h3 class="top-title open-popup-btn">
-                  Streaming Sites hosting Unauthorized AI Tracks
-                </h3>
+                <h3 class="top-title open-popup-btn">Lorem, ipsum dolor.</h3>
                 <p class="top-content">
-                  Platforms like Spotify and YouTube struggle to detect and
-                  block AI-generated songs mimicking famous artists.
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 </p>
               </div>
             </div>
@@ -124,11 +115,11 @@
               <div class="top-info">
                 <h2 class="num">03</h2>
                 <h3 class="top-title open-popup-btn">
-                  A National Registry for AI Content?
+                  Lorem ipsum dolor sit amet
                 </h3>
                 <p class="top-content">
-                  Researchers argue that a centralized database could help
-                  enforce consent-based laws.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Voluptatum.
                 </p>
               </div>
             </div>
