--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
           </div>
           <div class="top-blogs">
             <div class="top-blog">
-              <img src="./assets/images/image-retro-pcs.jpg" alt="" />
+              <div class="image">
+                <!-- <img src="./assets/images/image-retro-pcs.jpg" alt="" /> -->
+              </div>
               <div class="top-info">
                 <h2 class="num">01</h2>
                 <h3 class="top-title open-popup-btn">Lorem, ipsum</h3>
@@ -101,7 +103,9 @@
               </div>
             </div>
             <div class="top-blog">
-              <img src="./assets/images/image-top-laptops.jpg" alt="" />
+              <div class="image">
+                <!-- <img src="./assets/images/image-retro-pcs.jpg" alt="" /> -->
+              </div>
               <div class="top-info">
                 <h2 class="num">02</h2>
                 <h3 class="top-title open-popup-btn">Lorem, ipsum dolor.</h3>
@@ -111,7 +115,9 @@
               </div>
             </div>
             <div class="top-blog">
-              <img src="./assets/images/image-gaming-growth.jpg" alt="" />
+              <div class="image">
+                <!-- <img src="./assets/images/image-retro-pcs.jpg" alt="" /> -->
+              </div>
               <div class="top-info">
                 <h2 class="num">03</h2>
                 <h3 class="top-title open-popup-btn">
