Adding frontpage images and article source refrence

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <!-- <img src="./assets/images/logo.svg" alt="logo" class="logo" /> -->
         <h1 class="logo">B.</h1>
         <ul class="nav-links">
-          <li>Home</li>
+          <!-- <li>Home</li>
           <li>New</li>
           <li>Popular</li>
           <li>Trending</li>
-          <li>Categories</li>
+          <li>Categories</li> -->
         </ul>
         <img src="./assets/images/icon-menu.svg" class="menu" alt="" />
       </nav>
@@ -36,20 +36,41 @@
       <main>
         <div class="main-container">
           <div class="main-blog">
-            <picture>
-              <!-- <source media="(max-width:800px)"
-              srcset="./assets/images/image-web-3-mobile.jpg" /`>
-              <img src="./assets/images/image-web-3-desktop.jpg" alt="web3" /> -->
-            </picture>
+            <figure>
+              <picture class="header">
+                <img
+                  src="./assets/images/omar-lopez-rincon-tDhXm_WuqrA-unsplash.jpg"
+                  alt="Glowing circuit chip"
+                />
+                <figcaption class="image-credit">
+                  Photo by
+                  <a
+                    href="https://unsplash.com/@procopiopi?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    >Omar Lopez-Rincon</a
+                  >
+                  on
+                  <a
+                    href="https://unsplash.com/photos/tDhXm_WuqrA?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    >Unsplash</a
+                  >
+                </figcaption>
+              </picture>
+            </figure>
             <div class="blog-info">
-              <h1 class="blog-title">Lorem ipsum dolor sit amet.</h1>
+              <h1 class="blog-title">Protect Artists From AI Theft</h1>
               <div class="blog-read">
                 <p class="blog-content">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vel
-                  excepturi consequuntur illum suscipit rem temporibus aliquam
-                  repellat modi nihil alias?
+                  AI tools can now mimic artists’ voices and styles without
+                  permission, raising serious concerns about consent and
+                  ownership. Explore how unregulated voice cloning puts real
+                  musicians at risk.
                 </p>
-                <button class="open-popup-btn">Read more</button>
+                <button
+                  class="open-popup-btn article-link"
+                  data-article="protectArtists"
+                >
+                  Read more
+                </button>
               </div>
             </div>
           </div>
@@ -63,8 +84,8 @@
                     Are Being Hijacked
                   </h3>
                   <p class="new-content">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Eaque, architecto.
+                    U.S. AI policies favor innovation over enforcement, leaving
+                    artists vulnerable, unlike stricter EU regulations.
                   </p>
                 </div>
                 <div class="new-blog">
@@ -73,8 +94,8 @@
                     AI Music
                   </h3>
                   <p class="new-content">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Pariatur, sit.
+                    U.S. AI policies favor innovation over enforcement, leaving
+                    artists vulnerable, unlike stricter EU regulations.
                   </p>
                 </div>
                 <div class="new-blog">
@@ -91,41 +112,90 @@
           </div>
           <div class="top-blogs">
             <div class="top-blog">
-              <div class="image">
-                <!-- <img src="./assets/images/image-retro-pcs.jpg" alt="" /> -->
-              </div>
+              <figure class="image">
+                <img
+                  src="./assets/images/olena-bohovyk-Ft_Wn-K5YH8-unsplash.jpg"
+                  alt="Antique law books on wooden library shelf."
+                />
+                <figcaption class="image-credit">
+                  Photo by
+                  <a
+                    href="https://unsplash.com/@olenkasergienko?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyTextt"
+                    >Olena Bohovyk
+                  </a>
+                  on
+                  <a
+                    href="https://unsplash.com/photos/books-on-brown-wooden-shelf-Ft_Wn-K5YH8?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    >Unsplash</a
+                  >
+                </figcaption>
+              </figure>
               <div class="top-info">
                 <h2 class="num">01</h2>
-                <h3 class="top-title open-popup-btn">Lorem, ipsum</h3>
+                <h3 class="top-title open-popup-btn">Building AI Music Laws</h3>
                 <p class="top-content">
-                  Lorem ipsum dolor sit amet consectetur adipisicing.
+                  U.S. AI rules are voluntary, leaving artists unprotected.
+                  Binding laws and real consent systems are needed.
                 </p>
               </div>
             </div>
             <div class="top-blog">
-              <div class="image">
-                <!-- <img src="./assets/images/image-retro-pcs.jpg" alt="" /> -->
-              </div>
+              <figure class="image">
+                <img
+                  src="./assets/images/airalo-36cLNK7lzg4-unsplash.jpg"
+                  alt="Hand holding smartphone"
+                />
+                <figcaption class="image-credit">
+                  Photo by
+                  <a
+                    href="https://unsplash.com/@olenkasergienko?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyTextt"
+                  >
+                    Airalo
+                  </a>
+                  on
+                  <a
+                    href="https://unsplash.com/photos/person-holding-smartphone-browsing-travel-app-36cLNK7lzg4?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    >Unsplash</a
+                  >
+                </figcaption>
+              </figure>
               <div class="top-info">
                 <h2 class="num">02</h2>
-                <h3 class="top-title open-popup-btn">Lorem, ipsum dolor.</h3>
+                <h3 class="top-title open-popup-btn">A System That Can Work</h3>
                 <p class="top-content">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  AI music rules are feasible using current agencies, upgraded
+                  systems, and platform moderation.
                 </p>
               </div>
             </div>
             <div class="top-blog">
-              <div class="image">
-                <!-- <img src="./assets/images/image-retro-pcs.jpg" alt="" /> -->
-              </div>
+              <figure class="image">
+                <img
+                  src="./assets/images/junior-ferreira-7esRPTt38nI-unsplash.jpg"
+                  alt="Hand holding up lightbulb"
+                />
+                <figcaption class="image-credit">
+                  Photo by
+                  <a
+                    href="https://unsplash.com/@juniorferreir_?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                  >
+                    Júnior Ferreira
+                  </a>
+                  on
+                  <a
+                    href="https://unsplash.com/photos/person-catching-light-bulb-7esRPTt38nI?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+                    >Unsplash</a
+                  >
+                </figcaption>
+              </figure>
               <div class="top-info">
                 <h2 class="num">03</h2>
                 <h3 class="top-title open-popup-btn">
-                  Lorem ipsum dolor sit amet
+                  Addressing AI Music Myths.
                 </h3>
                 <p class="top-content">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Voluptatum.
+                  AI music isn’t harmless parody; today’s cloning is realistic
+                  and harmful, making regulation necessary.
                 </p>
               </div>
             </div>
@@ -142,9 +212,16 @@
           <h1 class="article-title"></h1>
           <h2 class="article-subtitle"></h2>
           <div class="article-byline"></div>
-          <img class="article-image" />
-          <div class="article-body"></div>
+          <!-- <img class="article-image" /> -->
+
+          <figure>
+            <img class="article-image" />
+            <figcaption class="image-credit article-image-credit"></figcaption>
+          </figure>
           <br />
+          <!-- <br /> -->
+
+          <div class="article-body"></div>
           <div class="article-footer">
             <button>Share full article</button>
             <button><i class="fa-solid fa-share"></i></button>
