--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Frontend Mentor | News homepage</title>
+    <title>Debrief</title>
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
     <div class="container">
       <nav>
         <!-- <img src="./assets/images/logo.svg" alt="logo" class="logo" /> -->
-        <h1 class="logo">B.</h1>
+        <span class="logos">
+          <h1 class="logo">Debrief</h1>
+          <small>breaking down noise</small>
+        </span>
         <ul class="nav-links">
           <!-- <li>Home</li>
           <li>New</li>
@@ -245,9 +248,8 @@
 
           <div class="article-body"></div>
           <div class="article-footer">
-            <button>Share full blog post</button>
-            <button><i class="fa-solid fa-share"></i></button>
-            <button><i class="fa-solid fa-bookmark"></i></button>
+            <button>Share full article</button>
+            <button class="icon"><i class="fa-solid fa-bookmark"></i></button>
           </div>
           <br />
         </div>
